# triaje-urgencias

./: .env.example  .gitattributes  CLAUDE.md  PLAN.md  README.md  docker-compose.yml
airflow/dags/: dag_smoke_test.py
data/dictionaries/: manchester_terms.csv
data/prompts/: extract_entities.j2  label_triage.j2  normalize_entities.j2
docs/: plan.md
guia/: pagina-1.html  pagina-2.html  pagina-3.html  pagina-4.html
infra/minio/: bootstrap-buckets.sh
infra/ollama/: pull-models.sh
infra/postgres/: 00-create-airflow-db.sh  01-init-triage.sql
services/_common/: pyproject.toml
services/_common/tests/: conftest.py  test_contracts.py  test_db.py  test_dictionary.py  test_llm.py  test_storage.py
services/_common/triage_common/: __init__.py  contracts.py  db.py  dictionary.py  llm.py  storage.py
services/anxiety-score/: Dockerfile  main.py
services/api-gateway-consulta/: Dockerfile  main.py
services/api-gateway-ingesta/: Dockerfile  main.py  requirements.txt
services/audit-ethics/: Dockerfile  main.py
services/dataset-builder/: Dockerfile  main.py  requirements.txt
services/evaluation/: Dockerfile  main.py
services/llm-extraction/: Dockerfile  main.py
services/llm-labeling/: Dockerfile  main.py
services/llm-normalization/: Dockerfile  main.py
services/ml-prediction/: Dockerfile  main.py  requirements.txt
services/ml-training/: Dockerfile  main.py  pipeline.py  requirements.txt
services/preprocessing/: Dockerfile  main.py
services/streamlit-mvp/: Dockerfile  app.py
services/transcripcion/: Dockerfile  main.py  requirements.txt
(+10 files in other folders)
